<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sort_name"
        android:title="@string/menu_sort_za"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sort_gold"
        android:title="@string/menu_sort_gold"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sort_total"
        android:title="@string/menu_sort_total"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_favourites"
        android:title="@string/menu_favourites"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_last_viewed"
        android:title="@string/menu_last_viewed"
        app:showAsAction="never" />
</menu>
